configure.ac: - Check for host that will support the version commands Makefile.am: - make will generate version.inc with macro definitions for detailed version output src/version.c: - _version will not provide the detailed deebe version info deebe version 7.7 (git_repo_url [branch] <commit_hash/tag>.<release/dirty>) <build_date> Target: <triplet for the target machine>
Signed-off-by: Karnajit Wangkhem <karnajitw@juniper.net>

--- a/configure.ac
+++ b/configure.ac
@@ -165,25 +165,31 @@ case ${host} in
 *-freebsd*|*-netbsd*)
 	# freebsd
 	HD_SRC='host-freebsd.$(OBJEXT)'
+	deebe_version=Yes
 	;;
 
 *-linux*)
 	# linux
 	HD_SRC='host-linux.$(OBJEXT)'
+	deebe_version=Yes
 	;;
 
 x86_64-apple-darwin*)
 	# x64 osx
 	os=osx
 	HD_SRC='host-osx.$(OBJEXT)'
+	deebe_version=Yes
 	;;
 
 *)
 	echo "*** Unsupported host $host." >&2
+	deebe_version=No
 	exit 1
 	;;	
 esac
 AC_SUBST([HD_SRC])
+
+AM_CONDITIONAL(OS_FOR_DEEBE_VERSION, [test x"$deebe_version" = xYes])
 
 AC_CONFIG_LINKS(os.h:os/$os.h)
 
