Support for Thread Local Storage (TLS) based on libthread_db: - thread_db initialization. - supoprt for qSymbol packets required by thread_db to locate   libthr/libpthread symbols. - proc services support needed by thread_db: symbol lookup and   memory read/write operations. - packet read/write logic is separated from handling gdb/lldb   requests/responses.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,9 +11,12 @@ deebe_SOURCES = \
 	memory.c \
 	main.c \
 	network.c \
+	packet.c \
 	ptrace.c \
+	proc.c \
 	signal.c \
 	target.c \
+	thread_db.c \
 	util.c \
 	version.c \
 	watchdog.c
