--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,15 +13,27 @@ deebe_SOURCES = \
 	network.c \
 	packet.c \
 	ptrace.c \
-	proc.c \
 	signal.c \
 	target.c \
-	thread_db.c \
 	util.c \
 	version.c \
 	watchdog.c
 
-EXTRA_deebe_SOURCES = linux.c linux-ppc.c linux-x86.c linux-aarch64.c linux-arm.c freebsd-x86.c osx-x86_64.c freebsd-ppc.c freebsd-x86.c freebsd.c target_ptrace.c target_osx.c 
+EXTRA_deebe_SOURCES = \
+	freebsd.c \
+	freebsd-ppc.c \
+	freebsd-proc.c \
+	freebsd-thread_db.c \
+	freebsd-x86.c \
+	linux.c \
+	linux-aarch64.c \
+	linux-arm.c \
+	linux-ppc.c \
+	linux-thread_db.c \
+	linux-x86.c \
+	osx-x86_64.c \
+	target_ptrace.c \
+	target_osx.c
 deebe_LDADD = $(TD_SRC) $(HD_SRC) $(TD_LIBS)
 deebe_DEPENDENCIES = $(TD_SRC) $(HD_SRC)
 
