--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -105,9 +105,9 @@ PROGRAMS = $(bin_PROGRAMS)
 am_deebe_OBJECTS = breakpoint.$(OBJEXT) cmdline.$(OBJEXT) \
 	gdb_interface.$(OBJEXT) elf.$(OBJEXT) lldb_interface.$(OBJEXT) \
 	memory.$(OBJEXT) main.$(OBJEXT) network.$(OBJEXT) \
-	packet.$(OBJEXT) ptrace.$(OBJEXT) proc.$(OBJEXT) \
-	signal.$(OBJEXT) target.$(OBJEXT) thread_db.$(OBJEXT) \
-	util.$(OBJEXT) version.$(OBJEXT) watchdog.$(OBJEXT)
+	packet.$(OBJEXT) ptrace.$(OBJEXT) signal.$(OBJEXT) \
+	target.$(OBJEXT) thread_db.$(OBJEXT) util.$(OBJEXT) \
+	version.$(OBJEXT) watchdog.$(OBJEXT)
 deebe_OBJECTS = $(am_deebe_OBJECTS)
 am__DEPENDENCIES_1 =
 AM_V_P = $(am__v_P_@AM_V@)
@@ -256,6 +256,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -280,7 +281,6 @@ deebe_SOURCES = \
 	network.c \
 	packet.c \
 	ptrace.c \
-	proc.c \
 	signal.c \
 	target.c \
 	thread_db.c \
@@ -288,7 +288,7 @@ deebe_SOURCES = \
 	version.c \
 	watchdog.c
 
-EXTRA_deebe_SOURCES = linux.c linux-ppc.c linux-x86.c linux-aarch64.c linux-arm.c freebsd-x86.c osx-x86_64.c freebsd-ppc.c freebsd-x86.c freebsd.c target_ptrace.c target_osx.c 
+EXTRA_deebe_SOURCES = linux.c linux-ppc.c linux-x86.c linux-aarch64.c linux-arm.c freebsd-x86.c osx-x86_64.c freebsd-ppc.c freebsd-x86.c freebsd.c target_ptrace.c target_osx.c freebsd-proc.c
 deebe_LDADD = $(TD_SRC) $(HD_SRC) $(TD_LIBS)
 deebe_DEPENDENCIES = $(TD_SRC) $(HD_SRC)
 all: all-am
@@ -381,6 +381,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cmdline.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/elf.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/freebsd-ppc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/freebsd-proc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/freebsd-x86.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/freebsd.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gdb_interface.Po@am__quote@
@@ -395,7 +396,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/network.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/osx-x86_64.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/packet.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/proc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ptrace.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/signal.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/target.Po@am__quote@
